@@ -1,29 +1,0 @@
-#! /bin/sh
-MINGW=MinGW
-if [ $# -ne 2 ] ; then
-    echo "$0: <configuration> <version>"
-    exit 1
-fi
-name=ellcc-$1-$2.tgz
-
-make -C examples distclean
-
-if [ ! -e bin-$MINGW ] ; then
-  echo "The MinGW bin directory doesn't exist."
-  exit 1;
-fi
-
-mv bin bin.save
-ln -s bin-$MINGW bin
-
-rm -fr bin/ecc++.exe
-cp bin/ecc.exe bin/ecc++.exe
-rm -fr bin/llvm-ranlib.exe
-cp bin/llvm-ar.exe bin/llvm-ranlib.exe
-pwd=`pwd`
-pwd=`basename $pwd`
-files=`sed -e "s:\(.*\):$pwd/\1:" ellcc.files`
-cd ..; tar --transform="s:$pwd/:ellcc/:" -cvpz -f $pwd/$name $files ; cd -
-rm bin
-mv bin.save bin
-echo created $name
